# PVC

./: CMakeLists.txt  PVC.pc.in  TODO
Docs/: Doxyfile  readme.md
Docs/html/: _constants_8h.html  _constants_8h.js  _constants_8h__dep__incl.map  _constants_8h__dep__incl.md5  _constants_8h__incl.map  _constants_8h__incl.md5  _constants_8h_source.html  _controller_logic_8cpp.html  _controller_logic_8cpp__incl.map  _controller_logic_8cpp__incl.md5  _controller_logic_8cpp_source.html  _controller_logic_8h.html  _controller_logic_8h.js  _controller_logic_8h__dep__incl.map  _controller_logic_8h__dep__incl.md5  _controller_logic_8h__incl.map  _controller_logic_8h__incl.md5  _controller_logic_8h_source.html  _d_bus_utils_8h.html  _d_bus_utils_8h.js  _d_bus_utils_8h__dep__incl.map  _d_bus_utils_8h__dep__incl.md5  _d_bus_utils_8h__incl.map  _d_bus_utils_8h__incl.md5  _d_bus_utils_8h_source.html  _p_v_c_8h.html  _p_v_c_8h.js  _p_v_c_8h__incl.map  _p_v_c_8h__incl.md5  _p_v_c_8h_source.html  _p_v_c___plugin_8h.html  _p_v_c___plugin_8h__incl.map  _p_v_c___plugin_8h__incl.md5  _p_v_c___plugin_8h_source.html  _player_8h.html  _player_8h__dep__incl.map  _player_8h__dep__incl.md5  _player_8h__incl.map  _player_8h__incl.md5  _player_8h_source.html  (+235 more)
Docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  files_0.js  files_1.js  (+34 more)
Src/Application/: ControllerLogic.cpp  ControllerLogic.h  Utils.h
Src/Core/: Constants.h  DBusUtils.h
Src/Core/Player/: Player.h  PlayerData.h  PlayerManager.cpp  PlayerManager.h
Src/Include/: PVC.h
Src/Widgets/: Standalone.cpp  Standalone.h
Src/qml/: PVC_Plugin.h  QmlPlaybackWidget.qml  qmldir
Src/qml/CustomModules/: QmlPixmapViewer.h  QmlStyle.h  Utils.h
Tests/: Test.qml  main.cpp  resources.qrc
